--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "devDependencies": {
     "react-redux": "^7.1.0",
     "react-scripts": "3.0.1",
-    "redux": "^4.0.4"
+    "redux": "^4.0.4",
+    "styled-components": "^4.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
